// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/etablissement /siret/grants returns grants 1`] = `
{
  "subventions": [
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "osiris",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "EJ0001",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "1000000000019--subv001--2023",
        },
      },
      "payments": [
        {
          "activitee": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'activité Exemple",
          },
          "amount": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 89988.3,
          },
          "centreFinancier": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "UO DGER XXXX-C001",
          },
          "dateOperation": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "object",
            "value": "2023-07-12T00:00:00.000Z",
          },
          "domaineFonctionnel": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'action Exemple",
          },
          "ej": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "0001821732",
          },
          "libelleProgramme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 101,
          },
          "siret": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "10000000000001",
          },
          "versementKey": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "1000000000019--subv001--2023",
          },
        },
      ],
    },
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "fonjep",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "N/A",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "S03351-2023-05-12-2023-10000000000001",
        },
      },
      "payments": [
        {
          "amount": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 3752,
          },
          "codePoste": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351",
          },
          "dateOperation": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "object",
            "value": "2023-07-12T00:00:00.000Z",
          },
          "libelleProgramme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 163,
          },
          "siret": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "10000000000001",
          },
          "versementKey": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351-2023-05-12-2023-10000000000001",
          },
        },
        {
          "amount": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 3752,
          },
          "codePoste": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351",
          },
          "dateOperation": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "object",
            "value": "2023-11-12T00:00:00.000Z",
          },
          "libelleProgramme": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 163,
          },
          "siret": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "10000000000001",
          },
          "versementKey": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351-2023-05-12-2023-10000000000001",
          },
        },
      ],
    },
  ],
}
`;

exports[`/etablissement /siret/subventions returns subventions 1`] = `
{
  "subventions": [
    {
      "actions_proposee": [
        {
          "intitule": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "objet",
          },
        },
      ],
      "annee_demande": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "number",
        "value": 2023,
      },
      "co_financement": {
        "cofinanceur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "",
        },
        "cofinanceur_email": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "",
        },
        "montants": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 0,
        },
      },
      "creer_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "date_commision": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "object",
        "value": "2023-03-13T00:00:00.000Z",
      },
      "dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "dispositif",
      },
      "ej": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "EJ0001",
      },
      "financeur_principal": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "attribuant",
      },
      "montants": {
        "accorde": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 15000,
        },
        "demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 30000,
        },
        "total": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 50000,
        },
      },
      "pluriannualite": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "boolean",
        "value": true,
      },
      "service_instructeur": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "serviceInstructeur",
      },
      "siret": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "10000000000001",
      },
      "sous_dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "sous-dispositif",
      },
      "status": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "Accordé",
      },
      "statut_label": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "Accordé",
      },
      "transmis_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "versementKey": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "1000000000019--subv001--2023",
      },
    },
    {
      "actions_proposee": [
        {
          "intitule": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "objet",
          },
        },
      ],
      "annee_demande": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "number",
        "value": 2023,
      },
      "co_financement": {
        "cofinanceur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "",
        },
        "cofinanceur_email": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "",
        },
        "montants": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 0,
        },
      },
      "creer_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "date_commision": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "object",
        "value": "2023-03-13T00:00:00.000Z",
      },
      "dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "dispositif",
      },
      "ej": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "N/A",
      },
      "financeur_principal": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "attribuant",
      },
      "montants": {
        "accorde": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 15000,
        },
        "demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 30000,
        },
        "total": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 50000,
        },
      },
      "pluriannualite": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "boolean",
        "value": true,
      },
      "service_instructeur": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "serviceInstructeur",
      },
      "siret": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "10000000000001",
      },
      "sous_dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "sous-dispositif",
      },
      "status": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "Accordé",
      },
      "statut_label": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "Accordé",
      },
      "transmis_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "versementKey": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "S03351-2023-05-12-2023-10000000000001",
      },
    },
  ],
}
`;
